Fix alignment of bullet points on `ja-JP` app menu accordion headers

--- a/src/components/applicationmenu/_applicationmenu-uplift.scss
+++ b/src/components/applicationmenu/_applicationmenu-uplift.scss
@@ -375,7 +375,9 @@
 
         &.list-item {
           &::before {
-            font-size: 1rem;
+            color: inherit;
+            font-size: 0.8rem;
+            padding-right: 12px;
           }
         }
 
@@ -477,10 +479,20 @@ html[dir='rtl'] {
 
     .accordion.panel.inverse {
       .accordion-pane {
-        .accordion-header:not(.has-chevron) {
-          .icon.chevron {
-            left: auto;
-            right: -5px;
+        .accordion-header {
+          &:not(.has-chevron) {
+            .icon.chevron {
+              left: auto;
+              right: -5px;
+            }
+          }
+
+          &.list-item {
+            &::before {
+              font-size: 1.2rem;
+              padding-left: 8px;
+              padding-right: 28px;
+            }
           }
         }
       }
